initial commit post completion

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,28 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+.DS_Store
+/replicationcontroller/.mvn/wrapper
+replicationcontroller/mvnw
+replicationcontroller/mvnw.cmd
+rl-agent/ppo_replication_tensorboard/PPO_1/events.out.tfevents.1761983158.Chethan-ka-MacBook-Air.local.37248.0
+rl-agent/ppo_replication_tensorboard/PPO_2/events.out.tfevents.1761994027.Chethan-ka-MacBook-Air.local.64593.0
+rl-agent/ppo_replication_tensorboard/PPO_3/events.out.tfevents.1761994144.Chethan-ka-MacBook-Air.local.65132.0
+rl-agent/ppo_replication_tensorboard/PPO_4/events.out.tfevents.1761997511.Chethan-ka-MacBook-Air.local.83634.0
+rl-agent/ppo_replication_tensorboard/PPO_5/events.out.tfevents.1761997980.Chethan-ka-MacBook-Air.local.85698.0
+rl-agent/ppo_replication_policy.zip
+rl-agent/ppo_replication_policy_hp.zip
+rl-agent/venv/bin/Activate.ps1
+rl-agent/venv/bin/activate.fish
+/rl-agent/venv
+/workload-generator/venv
+rl-agent/evaluation_results_rl_hp.json
+rl-agent/evaluation_results_rl.json
+rl-agent/evaluation_results_static.json
+rl-agent/latency_comparison.png
+rl-agent/latency_comparison_hp.png
+rl-agent/cost_comparison.png
+rl-agent/cost_comparison_hp.png
+replication/mvnw
+replication/mvnw.cmd
+replication/.mvn/wrapper/maven-wrapper.properties
