gnn rl agent added

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,24 @@ rl-agent/cost_comparison_hp.png
 replication/mvnw
 replication/mvnw.cmd
 replication/.mvn/wrapper/maven-wrapper.properties
+rl-agent-gnn/__pycache__/gnn_environment.cpython-313.pyc
+rl-agent-gnn/__pycache__/gnn_model.cpython-313.pyc
+rl-agent-gnn/__pycache__/graph_utils.cpython-313.pyc
+rl-agent-gnn/best_checkpoint_path.txt
+rl-agent/ppo_replication_tensorboard/MaskablePPO_1/events.out.tfevents.1766633182.Chethan-ka-MacBook-Air.local.18597.0
+rl-agent/ppo_replication_tensorboard/MaskablePPO_2/events.out.tfevents.1766641682.Chethan-ka-MacBook-Air.local.76087.0
+rl-agent/ppo_replication_tensorboard/PPO_1/events.out.tfevents.1766630419.Chethan-ka-MacBook-Air.local.99120.0
+rl-agent-gnn/manual_checkpoints/algorithm_state.pkl
+rl-agent-gnn/manual_checkpoints/policies/default_policy/policy_state.pkl
+rl-agent-gnn/manual_checkpoints/policies/default_policy/rllib_checkpoint.json
+rl-agent-gnn/manual_checkpoints/rllib_checkpoint.json
+rl-agent/evaluation_results_rl_20keys.json
+rl-agent/evaluation_results_rl_3keys.json
+rl-agent-gnn/gnn_cost_comparison_1.png
+rl-agent-gnn/gnn_cost_comparison_2.png
+rl-agent-gnn/gnn_cost_comparison_3.png
+rl-agent-gnn/evaluation_results_static.json
+rl-agent-gnn/evaluation_results_gnn.json
+evaluation_results_gnn.json
+evaluation_results_mlp.json
+evaluation_results_static.json
